--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "start": "node __sapper__/build"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.9",
     "compression": "^1.7.1",
+    "cross-fetch": "^3.0.6",
+    "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
     "polka": "next",
-    "sirv": "^1.0.0"
+    "sirv": "^1.0.0",
+    "svelte-apollo": "^0.4.0"
   },
   "devDependencies": {
     "sapper": "^0.28.0",
